--- a/config/database.yml
+++ b/config/database.yml
@@ -83,8 +83,9 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
-#production:
-#  <<: *default
+production:
+  <<: *default
+  url: <%= ENV['DATABASE_URL'%>
 #  database: prueba_portal_production
 #  username: prueba_portal
 #  password: <%= ENV["PRUEBA_PORTAL_DATABASE_PASSWORD"] %>
